# 00_kinect_demo

./: Application.cpp  Application.h  CMakeLists.txt
cmake/: FindKinect.cmake
framework/: DepthCamera.cpp  DepthCamera.h  DepthCameraException.cpp  DepthCameraException.h
